IDEA-290478 Breakpoint gutter indicator icon too large if "Legacy icon pack" is used
GitOrigin-RevId: 84e4fdf37ceeeae5564d8761c113e245fb48e5b7